syntax = "proto3";

package family.v1;

option go_package = "github.com/mibi2007/familytree/familytree_go/proto/family/v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "proto/common/v1/common.proto";

service FamilyService {
  // Family Management
  rpc CreateFamily(CreateFamilyRequest) returns (Family);
  rpc GetFamily(GetFamilyRequest) returns (Family);
  rpc UpdateFamilyOwner(UpdateFamilyOwnerRequest) returns (Family);
  rpc LeaveFamily(LeaveFamilyRequest) returns (google.protobuf.Empty);

  // Member Management
  rpc AddMember(AddMemberRequest) returns (Member);
  rpc UpdateMember(UpdateMemberRequest) returns (Member);
  rpc DeleteMember(DeleteMemberRequest) returns (google.protobuf.Empty);
  
  // Tree Sync
  rpc GetFamilyTree(GetFamilyTreeRequest) returns (FamilyTree);
}

message Family {
  string id = 1;
  string name = 2;
  string owner_id = 3;
  string ai_behavior_instructions = 4;
  google.protobuf.Timestamp created_at = 5;
}

message Member {
  string id = 1;
  string family_id = 2;
  string display_name = 3;
  string birth_date = 4; // Format: YYYY-MM-DD
  string gender = 5;
  int32 level = 6;
  string parent_id = 7;
  string spouse_id = 8;
  string user_id = 9; // Claimed user
}

message CreateFamilyRequest {
  string name = 1;
}

message GetFamilyRequest {
  string id = 1;
}

message UpdateFamilyOwnerRequest {
  string family_id = 1;
  string new_owner_id = 2;
}

message LeaveFamilyRequest {
  string family_id = 1;
}

message AddMemberRequest {
  string family_id = 1;
  string display_name = 2;
  string parent_id = 3;
  string spouse_id = 4;
}

message UpdateMemberRequest {
  Member member = 1;
}

message DeleteMemberRequest {
  string member_id = 1;
}

message GetFamilyTreeRequest {
  string family_id = 1;
  string version_hash = 2; // For snapshot caching check
}

message FamilyTree {
  string family_id = 1;
  string version_hash = 2;
  repeated Member members = 3;
  bool not_modified = 4;
}
