syntax = "proto3";

package auth.v1;

option go_package = "github.com/mibi2007/familytree/familytree_go/proto/auth/v1";

import "google/protobuf/timestamp.proto";
import "proto/common/v1/common.proto";

service AuthService {
  // Admin Onboarding
  rpc GenerateInviteToken(GenerateInviteTokenRequest) returns (InviteToken);
  rpc ValidateInviteToken(ValidateInviteTokenRequest) returns (ValidateInviteTokenResponse);
  rpc RequestAdminAccess(RequestAdminAccessRequest) returns (AdminAccessRequest);
  
  // Admin Approval
  rpc ListAdminRequests(ListAdminRequestsRequest) returns (ListAdminRequestsResponse);
  rpc ReviewAdminRequest(ReviewAdminRequestRequest) returns (AdminAccessRequest);

  // Profile Management
  rpc SyncUserProfile(SyncUserProfileRequest) returns (common.v1.UserProfile);
}

enum TokenPurpose {
  TOKEN_PURPOSE_UNSPECIFIED = 0;
  TOKEN_PURPOSE_ADMIN_ONBOARDING = 1;
  TOKEN_PURPOSE_FAMILY_INVITE = 2;
  TOKEN_PURPOSE_SUPPORT_GRANT = 3;
}

enum RequestStatus {
  REQUEST_STATUS_UNSPECIFIED = 0;
  REQUEST_STATUS_PENDING = 1;
  REQUEST_STATUS_APPROVED = 2;
  REQUEST_STATUS_REJECTED = 3;
}

message InviteToken {
  string token = 1;
  TokenPurpose purpose = 2;
  string associated_id = 3;
  google.protobuf.Timestamp expires_at = 4;
  bool is_used = 5;
}

message GenerateInviteTokenRequest {
  TokenPurpose purpose = 1;
  string associated_id = 2;
  // Expiration in seconds: 3600 (1h), 86400 (1d), 0 (unlimited)
  int64 lifetime_seconds = 3;
}

message ValidateInviteTokenRequest {
  string token = 1;
}

message ValidateInviteTokenResponse {
  bool is_valid = 1;
  TokenPurpose purpose = 2;
  string associated_id = 3;
}

message RequestAdminAccessRequest {
  string invitation_token = 1;
  string requested_role = 2; // e.g., "SYSTEM_ADMIN"
  string reason = 3;
}

message AdminAccessRequest {
  string id = 1;
  string user_id = 2;
  string requested_role = 3;
  RequestStatus status = 4;
  string reason = 5;
  string reviewed_by = 6;
  google.protobuf.Timestamp updated_at = 7;
  common.v1.UserProfile user_profile = 8;
}

message ListAdminRequestsRequest {
  RequestStatus filter_status = 1;
  common.v1.PaginatedRequest pagination = 2;
}

message ListAdminRequestsResponse {
  repeated AdminAccessRequest requests = 1;
  common.v1.PaginatedResponse pagination = 2;
}

message ReviewAdminRequestRequest {
  string request_id = 1;
  RequestStatus decision = 2; // APPROVED or REJECTED
}

message SyncUserProfileRequest {
  // Data from Firebase JWT
  string display_name = 1;
  string photo_url = 2;
}
