syntax = "proto3";

package common.v1;

option go_package = "github.com/mibi2007/familytree/familytree_go/proto/common/v1";

import "google/protobuf/timestamp.proto";

message UserProfile {
  string id = 1;
  string email = 2;
  string phone = 3;
  string display_name = 4;
  string photo_url = 5;
}

message PaginatedRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message PaginatedResponse {
  string next_page_token = 1;
}
